--- a/source/_posts/5-项目复盘/工银-自动化报告.md
+++ b/source/_posts/5-项目复盘/工银-自动化报告.md
@@ -1,21 +1,4 @@
-## 编辑器加锁处理
-
-1. 每十分钟轮询一次请求，加锁处理;
-2. 用户“点击退出编辑”+“组件卸载”, 都去调用解锁接口;
-
-
-## word导出图片
-
-1. 遇到的问题: 服务部署在客户的虚拟机上，无法访问外网，而highchart提供的导出图片功能，需要再部署一套highchart node 服务，是需要访问外网，所以我们考虑使用 `puppeteer` 在node端绘图;
-2. 好处，可多项目复用，可迁移，可将导出图片功能单独提供给客户;
-
-
-
-## 富文本编辑器
-
-1. 源码的实现上，使用了属性 `contenteditable`, 使得元素可编辑；
-2. 编辑器最终的输出实际上是 html
-
+# 工银-自动化报告
 
 
 ## 富文本编辑器的导出word功能
@@ -41,6 +24,27 @@
    4. 现在仍然存在的问题&原因：
       1. 有很多优化空间，比如在数据替换中，有图表，报表，要素，接口没有做批量请求，所以node端需要循环遍历向后端发起同步请求，拿到请求结果后，依次替换，这样做导致我们的导出服务很慢，如果遇到一篇内容很多的研报，导出一份word需要很久;
       2. 但是由于项目已经在稳定运行，且外包开发时任务密集，导致无法推动前后端协同去做优化，这样该服务的复用性和健壮性都不太理想，考虑人员流动性极高，后期运维成本很高;
+
+
+## 编辑器加锁处理
+
+1. 每十分钟轮询一次请求，加锁处理;
+2. 用户“点击退出编辑”+“组件卸载”, 都去调用解锁接口;
+
+
+## word导出图片
+
+1. 遇到的问题: 服务部署在客户的虚拟机上，无法访问外网，而highchart提供的导出图片功能，需要再部署一套highchart node 服务，是需要访问外网，所以我们考虑使用 `puppeteer` 在node端绘图;
+2. 好处，可多项目复用，可迁移，可将导出图片功能单独提供给客户;
+
+
+
+## 富文本编辑器
+
+1. 源码的实现上，使用了属性 `contenteditable`, 使得元素可编辑；
+2. 编辑器最终的输出实际上是 html
+
+
 
 ## 项目 => tabs 改造
 
